# pygalle.core.env

./: .coveralls.yml  .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  pygalle_package.py  requirements.txt  setup.cfg  setup.py
.tasks/: build.py  config.yml
.templates/: README.md.jinja  api.md.jinja  badges-declare.md.jinja  badges.md.jinja  build.md.jinja  compatibility.md.jinja  contributing.md.jinja  credits.md.jinja  history.md.jinja  install.md.jinja  issues.md.jinja  layout.md.jinja  license.md.jinja  synopsis.md.jinja  tests.md.jinja  usage.md.jinja  work-in-progress.md.jinja
docs/: conf.py  index.rst  modules.rst  pygalle.core.base.rst  pygalle.core.rst  pygalle.rst
src/pygalle/: __init__.py
test/: __init__.py  test_pygalle-env.py
