[metadata]
description-file = README.md

[pigalle-package]
name = pygalle.core.env
version = 0.0.1
author = SAS 9 Février
copyright = © Copyright 2018, SAS 9 Février
credits = SAS 9 Février
license = MIT
maintainer = SAS 9 Février
email = contact@fevrier.com
status = Alpha
description =  Environment variables manager for the Pygalle framework.
